fixed alignment for todo-icons and todo-info

--- a/static/dashboard.css
+++ b/static/dashboard.css
@@ -98,6 +98,7 @@ hr {
 	display: flex;
 	flex-direction: column;
 	line-height: normal;
+	margin-right: 10px;
 }
 
 .todo-info > .added-time {
